# beat-bouncer

./: .gitignore  Cargo.toml
assets/texture/: pong_spritesheet.ron  pong_spritesheet_all.xcf
src/: audio.rs  beats.rs  bundle.rs  main.rs  pong.rs
src/systems/: bounce.rs  mod.rs  move_paddle.rs  paddle.rs  winner.rs
