[package]
name = "beat-bouncer"
version = "0.1.0"
authors = ["Miguel Iglesias <miguel.iglesias@dimeder.com>"]
edition = "2018"

[dependencies]
amethyst = "0.14.0"
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
